# pyjoy2

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml
docs/: comparison-with-joy.md  optimization.md  pyjoy.md  pyjoy2.md
examples/: benchmark.joy
lib/: prelude.joy
src/pyjoy2/: __init__.py  __main__.py  builtins.py  core.py  parser.py  repl.py
tests/: __init__.py  conftest.py  test_builtins.py  test_cli.py  test_core.py  test_parser.py  test_repl.py
